Switch from SQLite to PostgreSQL for Vercel deployment
- Update Prisma schema to use PostgreSQL provider
- Add @prisma/adapter-neon and Neon serverless packages
- Update .env.example with PostgreSQL connection strings
- Required for Vercel serverless environment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Database
-DATABASE_URL="file:./dev.db"
+# For local development with SQLite:
+# DATABASE_URL="file:./dev.db"
+
+# For production (Vercel Postgres) - these will be auto-populated by Vercel:
+DATABASE_URL=your_postgres_connection_string_here
+DIRECT_URL=your_postgres_direct_connection_string_here
 
 # Gemini AI for intelligent job search query generation
 # Get your free key at: https://aistudio.google.com/app/apikey
