--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^6.18.0",
     "@prisma/client": "^6.18.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -21,7 +23,8 @@
     "react": "^19",
     "react-datasheet-grid": "^4.11.5",
     "react-dom": "^19",
-    "serpapi": "^2.2.1"
+    "serpapi": "^2.2.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
